# Errmail

./: README.md  TEST_USAGE.md  pyproject.toml  setup.cfg  setup.py  test_error.py  test_service.py  test_smtp.py
docs/: CONFIGURATION.md  SMTP_SETUP.md  TROUBLESHOOTING.md
errmail/: __init__.py  __main__.py  cli.py  config.py  detector.py  mailer.py  notifier.py  runner.py  utils.py
errmail.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
