[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "errmail"
version = "0.1.0"
description = "Run any command, detect stderr errors/tracebacks, and email alerts without changing the app."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
    { name = "errmail" }
]
keywords = ["error", "monitoring", "email", "alert", "stderr", "traceback"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Monitoring",
    "Topic :: Utilities",
]

# 项目没有外部依赖，只使用 Python 标准库
dependencies = []

[project.scripts]
errmail = "errmail.cli:main"

[tool.setuptools]
packages = ["errmail"]

