[metadata]
name = errmail
version = 0.1.0
description = Run any command, detect stderr errors/tracebacks, and email alerts without changing the app.
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT

[options]
packages = find:
python_requires = >=3.9
include_package_data = True

[options.entry_points]
console_scripts =
    errmail = errmail.cli:main

